added new actions: maximize, minimize, full screen, new window, new private window, tab to window, close window, reload all, reload all caches

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -19,7 +19,16 @@
     "ScrollTop": "U",
     "ScrollBottom": "D",
     "Next": "DR",
-    "Previous": "DL"
+    "Previous": "DL",
+    "Maximize": "",
+    "Minimize": "",
+    "Fullscreen": "",
+    "NewWindow": "",
+    "NewPrivateWindow": "",
+    "TabToWindow": "",
+    "CloseWindow": "",
+    "ReloadAll": "",
+    "ReloadAllCaches": ""
   },
   "Display": {
     "Gesture": {
