added addon update config resolver and update notification

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,7 +16,8 @@
     "<all_urls>",
     "storage",
     "sessions",
-    "bookmarks"
+    "bookmarks",
+    "notifications"
   ],
   "content_scripts": [
   {
