added new action: "go up one level in the url hierarchy"

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -28,7 +28,8 @@
     "TabToWindow": "",
     "CloseWindow": "",
     "ReloadAll": "",
-    "ReloadAllCaches": ""
+    "ReloadAllCaches": "",
+    "URLLevelUp": ""
   },
   "Display": {
     "Gesture": {
