--- a/src/res/config.json
+++ b/src/res/config.json
@@ -29,7 +29,11 @@
     "CloseWindow": "",
     "ReloadAll": "",
     "ReloadAllCaches": "",
-    "URLLevelUp": ""
+    "URLLevelUp": "",
+    "ImageToTab": "",
+    "LinkToForegroundTab": "",
+    "LinkToBackgroundTab": "",
+    "SearchSelection": ""
   },
   "Display": {
     "Gesture": {
