--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Gesturefy",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "__MSG_extensionDescription__",
   "author": "Robbendebiene",
   "homepage_url": "https://github.com/Robbendebiene/Gesturefy",
@@ -23,6 +23,7 @@
     {
       "matches": ["<all_urls>"],
       "run_at": "document_start",
+      "match_about_blank": true,
       "all_frames": true,
       "js": [
         "lib/injection.js"
