added: Link to bookmark & Open homepage action added: advanced settings to specific actions (homepage, scroll, link-to-tab, search) added gesture suppression key minor fixes

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -38,14 +38,24 @@
     "ImageToTab": "",
     "LinkToForegroundTab": "",
     "LinkToBackgroundTab": "",
+    "LinkToBookmark": "",
     "SearchSelection": "",
+    "OpenHomepage": "",
     "SaveAsPDF": "",
     "Print": "",
     "PrintPreview": ""
   },
   "Settings": {
+    "Actions": {
+      "searchEngineURL": "https://www.google.com/search?q=",
+      "homepageURL": "about:home",
+      "scrollDuration": 100,
+      "scrollPageDuration": 300,
+      "newTabOnEmptyLink": false
+    },
     "Gesture": {
       "mouseButton": 2,
+      "suppressionKey": "",
       "distanceThreshold": 10,
       "distanceSensitivity": 10,
       "Trace": {
