added backup, restore and reset; added new actions: screen shot, copy url, copy selection, copy image; added advanced settings: new tab position, remove tab focus, zoom step; removed new tab after and new tab right; enhanced link to bookmark, open background link, zoom in/out behavior

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Gesturefy",
-  "version": "1.1.9",
+  "version": "1.1.10",
   "description": "__MSG_extensionDescription__",
   "author": "Robbendebiene",
   "homepage_url": "https://github.com/Robbendebiene/Gesturefy",
@@ -17,6 +17,8 @@
     "storage",
     "sessions",
     "bookmarks",
+    "downloads",
+    "clipboardWrite",
     "notifications"
   ],
   "content_scripts": [
