--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
   - source: /**/_locales/en/messages.json
     translation: /**/_locales/%locale_with_underscore%/%original_file_name%
+  - source: /**/_locales/en/messages.json
+    translation: /**/_locales/%two_letters_code%/%original_file_name%
