added new action: Open link added option to query search in background tab added fallback fonts

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -40,6 +40,7 @@
     "LinkToBookmark": "",
     "SearchSelection": "",
     "OpenHomepage": "",
+    "OpenLink": "",
     "SaveAsPDF": "",
     "Print": "",
     "PrintPreview": "",
@@ -51,6 +52,7 @@
   "Settings": {
     "Actions": {
       "searchEngineURL": "https://www.google.com/search?q=",
+      "searchInBackgroundTab": false,
       "homepageURL": "about:home",
       "scrollDuration": 100,
       "scrollPageDuration": 300,
