changed search in background tab to focus search result

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -52,7 +52,7 @@
   "Settings": {
     "Actions": {
       "searchEngineURL": "https://www.google.com/search?q=",
-      "searchInBackgroundTab": false,
+      "focusSearchResult": true,
       "homepageURL": "about:home",
       "scrollDuration": 100,
       "scrollPageDuration": 300,
