Added new actions
ImageToCurrentTab, ImageToBackgroundTab, SaveImage

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -35,6 +35,9 @@
     "ReloadAllCaches": "",
     "URLLevelUp": "",
     "ImageToTab": "",
+    "ImageToCurrentTab": "",
+    "ImageToBackgroundTab": "",
+    "SaveImage": "",
     "LinkToForegroundTab": "",
     "LinkToBackgroundTab": "",
     "LinkToBookmark": "",
