added 4 new actions
- ImageToCurrentTab
- ImageToBackgroundTab
- SaveImageAs
- SaveImageNow

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -35,6 +35,10 @@
     "ReloadAllCaches": "",
     "URLLevelUp": "",
     "ImageToTab": "",
+    "ImageToCurrentTab": "",
+    "ImageToBackgroundTab": "",
+    "SaveImageAs": "",
+    "SaveImageNow": "",
     "LinkToForegroundTab": "",
     "LinkToBackgroundTab": "",
     "LinkToBookmark": "",
