add new action "OpenPageSourceCode"

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -47,7 +47,8 @@
     "SaveScreenshot": "",
     "CopyTabURL": "",
     "CopyTextSelection": "",
-    "CopyImage": ""
+    "CopyImage": "",
+    "OpenPageSourceCode": ""
   },
   "Settings": {
     "Actions": {
