--- a/src/res/config.json
+++ b/src/res/config.json
@@ -53,7 +53,8 @@
     "CopyTabURL": "",
     "CopyLinkURL": "",
     "CopyTextSelection": "",
-    "CopyImage": ""
+    "CopyImage": "",
+    "ViewPageSourceCode": ""
   },
   "Settings": {
     "Actions": {
