Added a new setting for ImageToTab

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -64,6 +64,7 @@
       "scrollDuration": 100,
       "scrollPageDuration": 300,
       "newTabOnEmptyLink": false,
+      "imageToTabBackground": false,
       "newTabPosition": "default",
       "removeTabFocus": "default",
       "removePinnedTabs": true,
