Added new action OpenImage

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -45,6 +45,7 @@
     "SearchSelection": "",
     "OpenHomepage": "",
     "OpenLink": "",
+    "OpenImage": "",
     "SaveAsPDF": "",
     "Print": "",
     "PrintPreview": "",
