Changed default value of option

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -64,7 +64,7 @@
       "scrollDuration": 100,
       "scrollPageDuration": 300,
       "newTabOnEmptyLink": false,
-      "focusImageToTab": false,
+      "focusImageToTab": true,
       "newTabPosition": "default",
       "removeTabFocus": "default",
       "removePinnedTabs": true,
