- added new actions: first tab, last tab, previous selected tab, open addon settings - rearranged some actions in the settings page.

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -24,6 +24,9 @@
     "ScrollPageDown": "",
     "Next": "DR",
     "Previous": "DL",
+    "FirstTab": "",
+    "LastTab": "",
+    "PreviousSelectedTab": "",
     "Maximize": "",
     "Minimize": "",
     "Fullscreen": "",
@@ -44,6 +47,7 @@
     "LinkToPrivateWindow": "",
     "SearchSelection": "",
     "OpenHomepage": "",
+    "OpenAddonSettings": "",
     "OpenLink": "",
     "OpenImage": "",
     "SaveAsPDF": "",
