--- a/src/res/config.json
+++ b/src/res/config.json
@@ -27,6 +27,7 @@
     "FirstTab": "",
     "LastTab": "",
     "PreviousSelectedTab": "",
+    "ToggleMaximize": "",
     "Maximize": "",
     "Minimize": "",
     "Fullscreen": "",
