--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,8 @@
 files:
-  - source: |- # '\n' recognition
+  - source: |-
       /**/src/_locales/en/messages.json
-    translation: /**/src/_locales/%locale_with_underscore%/%original_file_name%
+    translation: |-
+      /**/src/_locales/%locale_with_underscore%/%original_file_name%
     languages_mapping:
       locale_with_underscore:
         cs: cs
