--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,8 +1,6 @@
 files:
-  - source: |-
-      /**/src/_locales/en/messages.json
-    translation: |-
-      /**/src/_locales/%locale_with_underscore%/%original_file_name%
+  - source: /**/src/_locales/en/messages.json
+    translation: /**/src/_locales/%locale_with_underscore%/%original_file_name%
     languages_mapping:
       locale_with_underscore:
         cs: cs
