--- a/src/res/config.json
+++ b/src/res/config.json
@@ -27,9 +27,9 @@
     "FirstTab": "",
     "LastTab": "",
     "PreviousSelectedTab": "",
-    "ToggleMaximize": "",
     "Maximize": "",
     "Minimize": "",
+    "ToggleWindowSize": "",
     "Fullscreen": "",
     "NewWindow": "",
     "NewPrivateWindow": "",
