Add function: ToggleWindowSize

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -29,6 +29,7 @@
     "PreviousSelectedTab": "",
     "Maximize": "",
     "Minimize": "",
+    "ToggleWindowSize": "",
     "Fullscreen": "",
     "NewWindow": "",
     "NewPrivateWindow": "",
