added popup actions: show all tabs, show recently closed tabs; rearranged some actions; fixed #203

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -60,7 +60,9 @@
     "CopyLinkURL": "",
     "CopyTextSelection": "",
     "CopyImage": "",
-    "ViewPageSourceCode": ""
+    "ViewPageSourceCode": "",
+    "PopupAllTabs": "",
+    "PopupRecentlyClosedTabs": ""
   },
   "Settings": {
     "Actions": {
