added advanced option for first tab action to allow pinned tabs / added #201

--- a/src/res/config.json
+++ b/src/res/config.json
@@ -75,6 +75,7 @@
       "focusImageToTab": true,
       "newTabPosition": "default",
       "removeTabFocus": "default",
+      "firstTabIncludePinned": false,
       "removePinnedTabs": true,
       "zoomStep": "",
       "promptSaveImageAs": true
