--- a/src/res/config.json
+++ b/src/res/config.json
@@ -128,6 +128,9 @@
       "mouseButton": 1,
       "wheelUp": "Previous",
       "wheelDown": "Next"
+    },
+    "General": {
+      "updateNotification": true
     }
   }
 }
