added missing translation text data

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,8 +29,7 @@
     "bookmarks",
     "clipboardWrite",
     "clipboardRead",
-    "downloads",
-    "history"
+    "downloads"
   ],
   "content_scripts": [
     {
