added x to icon set + replaced icon locations

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,9 +12,9 @@
   "author": "Robbendebiene",
   "homepage_url": "https://github.com/Robbendebiene/Gesturefy",
   "icons": {
-    "96": "res/icons/iconx96.png",
-    "48": "res/icons/iconx48.png",
-    "32": "res/icons/iconx32.png"
+    "96": "res/img/iconx96.png",
+    "48": "res/img/iconx48.png",
+    "32": "res/img/iconx32.png"
   },
   "default_locale": "en",
   "permissions": [
