--- a/src/manifest.json
+++ b/src/manifest.json
@@ -38,13 +38,13 @@
       "match_about_blank": true,
       "all_frames": true,
       "js": [
-        "lib/contentCommons.js",
-        "lib/zoomHandler.js",
-        "lib/gestureHandler.js",
-        "lib/gestureIndicator.js",
-        "lib/rockerHandler.js",
-        "lib/wheelHandler.js",
-        "lib/popupHandler.js",
+        "lib/content-commons.js",
+        "lib/zoom-handler.js",
+        "lib/gesture-handler.js",
+        "lib/gesture-indicator.js",
+        "lib/rocker-handler.js",
+        "lib/wheel-handler.js",
+        "lib/popup-handler.js",
         "lib/content.js"
       ]
     },
@@ -53,7 +53,7 @@
       "run_at": "document_start",
       "match_about_blank": true,
       "css": [
-        "lib/css/gestureIndicator.css"
+        "lib/css/gesture-indicator.css"
       ]
     }
   ],
@@ -63,7 +63,7 @@
   },
   "background": {
     "scripts": [
-      "lib/backgroundCommons.js",
+      "lib/background-commons.js",
       "lib/commands.js",
       "lib/background.js"
     ]
