added Popup Search Engines command

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,7 +29,8 @@
     "bookmarks",
     "clipboardWrite",
     "clipboardRead",
-    "downloads"
+    "downloads",
+    "search"
   ],
   "content_scripts": [
     {
