fixed minor errors

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -56,6 +56,6 @@
   "web_accessible_resources": [
     "resources/fonts/arrows.woff",
     "resources/fonts/NunitoSans-Regular.woff",
-    "core/html/popup.html"
+    "core/interfaces/html/popup-command-interface.html"
   ]
 }
