Moved options folder to subdirectory "views"

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -47,7 +47,7 @@
     }
   ],
   "options_ui": {
-    "page": "options/html/index.html",
+    "page": "views/options/html/index.html",
     "open_in_tab": true
   },
   "background": {
