Bundled content.js since ES6 modules are currently not supported in content scripts

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -39,7 +39,7 @@
       "match_about_blank": true,
       "all_frames": true,
       "js": [
-        "core/workarounds/import.content.js"
+        "core/workarounds/content.bundle.js"
       ],
       "css": [
         "core/interfaces/css/mouse-gesture-interface.css"
