Added advanced command to clear browsing data (#121)

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -30,7 +30,8 @@
     "clipboardWrite",
     "clipboardRead",
     "downloads",
-    "search"
+    "search",
+    "browsingData"
   ],
   "content_scripts": [
     {
