updated options page structure

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -51,7 +51,7 @@
     "page": "core/workarounds/background.html"
   },
   "options_ui": {
-    "page": "views/options/html/index.html",
+    "page": "views/options/index.html",
     "open_in_tab": true
   },
   "browser_action": {
