--- a/.github/workflows/nightly_builds.yml
+++ b/.github/workflows/nightly_builds.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     name: "Build"
     runs-on: ubuntu-latest
+    environment: AMO
     env:
       UPDATE_MANIFEST_URL: "https://example.com/updates.json"
       ADDON_URL: "https://example.com/updates.json"
