--- a/.github/workflows/nightly_builds.yml
+++ b/.github/workflows/nightly_builds.yml
@@ -1,7 +1,6 @@
 name: "Build Nightly"
 on:
   push: # < only used for github testing
-  pull_request_target:
 
   # Allow this workflow to be triggered manually from the Actions tab
   workflow_dispatch:
@@ -10,6 +9,7 @@ jobs:
   build:
     name: "Build"
     runs-on: ubuntu-latest
+    # set Github secrets environment
     environment: AMO
     env:
       UPDATE_MANIFEST_URL: "https://example.com/updates.json"
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
+        with:
+          # required to count the total number of commits later
+          fetch-depth: 0
 
       - name: "Get commit count"
         run: echo "COMMIT_COUNT=$(git rev-list --count HEAD)" >> $GITHUB_ENV
@@ -51,7 +54,7 @@ jobs:
           timeout: 900000
           
       - name: "Generate sha256 hash of artifact"
-        run: echo "HASH=($(sha256sum ${{ steps.web-ext-sign.outputs.target }}))" >> $GITHUB_ENV
+        run: echo "HASH=$(($(sha256sum ${{ steps.web-ext-sign.outputs.target }})))" >> $GITHUB_ENV
   
       # Set version number to commit count
       # Create updates.json file
@@ -77,6 +80,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Gesturefy-Nightly
-          path: |
-            ${{ steps.web-ext-sign.outputs.target }}
-            updates.json
+          path: ${{ steps.web-ext-sign.outputs.target }}
