--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "manifest_version": 2,
-  "applications": {
+  "manifest_version": 3,
+  "browser_specific_settings": {
     "gecko": {
       "id": "{506e023c-7f2b-40a3-8066-bc5deb40aebe}",
       "strict_min_version": "86.0"
@@ -17,9 +17,12 @@
     "32": "resources/img/icon.svg"
   },
   "default_locale": "en",
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "permissions": [
-    "<all_urls>",
     "storage",
+    "scripting",
     "notifications",
     "browserSettings"
   ],
@@ -54,7 +57,7 @@
     "page": "views/options/index.html",
     "open_in_tab": true
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "96": "resources/img/icon.svg",
       "48": "resources/img/icon.svg",
@@ -63,7 +66,12 @@
     "default_title": "__MSG_commandLabelOpenAddonSettings__"
   },
   "web_accessible_resources": [
-    "resources/fonts/NunitoSans-Regular.woff",
-    "core/views/popup-command-view/popup-command-view.html"
+    {
+      "resources": [
+        "resources/fonts/NunitoSans-Regular.woff",
+        "core/views/popup-command-view/popup-command-view.html"
+      ],
+      "matches": ["*://*/*"]
+    }
   ]
 }
