Add initial browser action popup implementation

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -64,7 +64,9 @@
       "48": "resources/img/icon.svg",
       "32": "resources/img/icon.svg"
     },
-    "default_title": "__MSG_commandLabelOpenAddonSettings__"
+    "default_title": "Gesturefy",
+    "default_popup": "views/popup/index.html",
+    "default_area": "navbar"
   },
   "web_accessible_resources": [
     {
